--- a/index.html
+++ b/index.html
@@ -9,17 +9,22 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600&family=Literata:wght@100;200;300">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600&family=Exo:wght@100;200;300">
 <link rel="stylesheet" href="assets/css/style.css">
 <title>Rosie</title>
 </head>
 <body>
     <header>
         <div class="row">
-            <a href="index.html" class="col-md-4 logo">
-        </div>
+            <a href="index.html" class="col-md-4 logo"></a>
             <div class="col-md-8">
-  
+                <div class="row bg-color-name-title">
+                    <div class="col heading">
+                        <h1 class="name">Rosie Odenkirk</h1>
+                        <h2 class="title">Full Stack Developer</h2>
+                    </div>
+                </div>
+
             </div>
         </div>
     </header>
@@ -27,6 +32,7 @@
     
     </section>
     <footer>
+    </footer>
     
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
