--- a/resume.html
+++ b/resume.html
@@ -1,79 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Resume" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600&family=Exo:wght@100;200;300">
-<link rel="stylesheet" href="assets/css/style.css">
-<title>Rosie</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Rosie</title>
 </head>
 <body>
     <header>
         <div class="row no-gutters">
-            <a href="index.html" class="col-md-4 logo"></a>
+            <a class="col-md-4 logo" href="02-index.html"></a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
                         <h1 class="name">Rosie Odenkirk</h1>
-                        <h2 class="title">Full Stack Developer</h2>
+                        <h2 class="title"> Full Stack Developer</h2>
                     </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fas fa-home" aria-hiden="true"></i><span>Home</span></a>
+                        <ul id="nav" class="list-inline menucontainer row">
+                            <li class="col-6 col-sm-3 ui-menu-color-home menuitem">
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fas fa-graduation-cap" aria-hiden="true"></i><span>Resume</span></a>
+                            <li class="col-6 col-sm-3 ui-menu-color-resume menuitem">
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fas fa-comment" aria-hiden="true"></i><span>Contact</span></a>
+                            <li class="col-6 col-sm-3  ui-menu-color-contact menuitem">
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fas fa-cloud-download-alt" aria-hiden="true"></i><span>Download</span></a>
+                            <li class="col-6 col-sm-3 ui-menu-color-download menuitem">
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
                             </li>
                         </ul>
                     </div>
                 </div>
-
             </div>
         </div>
     </header>
-<section class="container-fluid">
+    <section class="container-fluid">
         <div class="row">
             <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
-                    <div class="co-12">
+                    <div class="col-12">
                         <h3 class="history-heading uppercase">
-                        Work History
+                            Work History
                         </h3>
                     </div>
                 </div>
-               <div class="history-items">
-                <div class="timeline-item" data-dates="02/1988 - 04/2004">
-                    <h4>National College of Art and Design (NCAD)</h4>
-                    <p>Sculptor in residence</p>
-                </div>
-                <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                    <h4>Fisher and Diaz Funeral Directors</h4>
-                    <p>Junior Embalmer</p>
-                </div>
-                <div class="timeline-item" data-dates="06/2008 - 06/2011">
-                    <h4>Phantom Design Inc. Dublin</h4>
-                    <p>Junior Front End Developer</p>
-                </div>
-                <div class="timeline-item" data-dates="06/2011 - Present">
-                    <h4>Hooli Inc. Silicon Valley</h4>
-                    <p>Full Stack Web Developer</p>
-                </div>
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="02/1998 - 04/2004">
+                        <h4>National College of Art and Design (NCAD)</h4>
+                        <p>Sculptor in residence</p>
+                    </div>
+                    <div class="timeline-item" data-dates="04/2004 - 06/2008">
+                        <h4>Fisher and Diaz Funeral Directors</h4>
+                        <p>Junior Embalmer</p>
+                    </div>
+                    <div class="timeline-item" data-dates="06/2008 - 06/2011">
+                        <h4>Phantom Design Inc. Dublin</h4>
+                        <p>Junior Front End Developer</p>
+                    </div>
+                    <div class="timeline-item" data-dates="06/2011 - Present">
+                        <h4>Hooli Inc. Silicon Valley</h4>
+                        <p>Full Stack Web Developer</p>
+                    </div>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
@@ -86,13 +81,12 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fas fa-tv" aria-hiden="true"></i>
+                                <i class="three-reasons-icon fa fa-tv" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
-                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. 
-                                    I also have extensive experience in Front End Frameworks such as Angular and React.
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React
                                 </p>
                             </div>
                         </div>
@@ -100,14 +94,12 @@
                     <div class="col-10 offset-1 offset-sm-0 col-sm-4 col-md-6">
                         <div class="row">
                             <div class="col-2">
-                                <i class="three-reasons-icon fas fa-gears" aria-hiden="true"></i>
+                                <i class="three-reasons-icon fa fa-gears" aria-hidden="true"></i>
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
-                                    I specialize in data-driven web applications. Many of my projects utilise 
-                                    document-based data. I use Python and Django in conjunction with MongoDB to 
-                                    process and present information.
+                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
                                 </p>
                             </div>
                         </div>
@@ -145,28 +137,26 @@
                             </div>
                             <span class="progress-type">SQL / NoSQL</span>
                         </div>
-
                     </div>
                 </div>
-                </div>
             </div>
+        </div>
+        
     </section>
-
     <footer class="container-fluid">
         <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
-                Full Stack Web Developer. Skilled in everything from HTML to Heroku.
-                The capacity for structural and design thinking.
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
                 </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
-                Need a printable version of my CV? Download it here.
+                    Need a printable version of my CV? Download it here.
                     <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
-                        <i class="fas fa-file-download" aria-hidden="true"></i>
+                        <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
                 </p>
@@ -175,48 +165,44 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                            <i class="fab fa-facebook-square" aria-hidden="true"></i>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                            <i class="fab fa-twitter-square" aria-hidden="true"></i>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                        <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <span class="sr-only">LinkedIn</span>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-linkedin" aria-hidden="true"></i>
+                            <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                            <i class="fab fa-pinterest-square" aria-hidden="true"></i>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                            <i class="fab fa-instagram-square" aria-hidden="true"></i>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
-                        <i class="fab fa-youtube" aria-hidden="true"></i>
-                        <span class="sr-only">Youtube</span>
+                        <a target="_blank" href="#">
+                            <i class="fa fa-youtube" aria-hidden="true"></i>
+                            <span class="sr-only">YouTube</span>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
     </footer>
-    
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
