--- a/interests.html
+++ b/interests.html
@@ -196,12 +196,8 @@
         </div>
 
     </footer>
-    <script>
-        let APIKey = "AIzaSyAy8IyX7_mfbEUH8q1lceATeEs_BRPlbpU";
-    </script>
-
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
+    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=APIKEYREMOVED&callback=initMap&libraries=&v=weekly" defer></script>
     <script src="assets/js/maps.js"></script>
 </body>
 </html>
